Socket Experiment v1.3